--- a/src/index1.html
+++ b/src/index1.html
@@ -242,7 +242,7 @@
     </section>
 
     <!-- Job Openings -->
-    <section id="features" class="py-16 bg-blue-900 bg-opacity-25 md:py-20 lg:py-28">
+    <section id="features" class="relative z-10 py-16 bg-blue-700 bg-opacity-20 md:py-20 lg:py-28">
         <div class="container">
             <div class="w-full mx-auto text-center wow fadeInUp" data-wow-delay=".1s"
                 style="max-width:570px;margin-bottom:100px">
