--- a/src/index1.html
+++ b/src/index1.html
@@ -21,7 +21,7 @@
                 <div class="max-w-full px-4 w-60 xl:mr-12">
                     <a class="block w-full py-8 header-logo " href="#">
                        
-                            <img class="" src="/assets/fresherbot_logo_dark.png" alt="">
+                            <img class="" src="../assets/fresherbot_logo_dark.png" alt="">
                        
                     </a>
                 </div>
@@ -1529,7 +1529,7 @@ l-225 465 -466 2 -465 3 342 695 c188 382 346 696 351 697 5 2 357 -696 783
             <div class="flex flex-wrap -mx-4">
                 <div class="w-full px-4 md:w-1/2 lg:w-4/12 xl:w-5/12">
                     <div class="mb-12 max-w-[360px] lg:mb-16"><a class="inline-block mb-8"
-                            href="#"><img class="" src="/assets/fresherbot_logo_dark.png" alt="">
+                            href="#"><img class="" src="../assets/fresherbot_logo_dark.png" alt="">
                         </a>
                         <p class="text-base font-medium leading-relaxed mb-9 text-body-color">Lorem ipsum dolor sit
                             amet, consectetur adipiscing elit. Integer lobortis.</p>
