added nav.js file

--- a/src/index1.html
+++ b/src/index1.html
@@ -1820,7 +1820,7 @@ l-225 465 -466 2 -465 3 342 695 c188 382 346 696 351 697 5 2 357 -696 783
             </svg></div>
     </footer>
     
-    <script src="../dist/voilaui.js"></script>
+    <script src="../dist/nav.js"></script>
 
 </body>
 
